# qni-connector-ws-cpp

./: CMakeLists.txt  NOTICE.md
include/: CMakeLists.txt  qni-connector-ws.hpp
include/internal/: qni-handshake.h
src/: CMakeLists.txt  qni-connector-ws.cpp
src/internal/: qni-handshake.c
